# pyrunner

./: .gitignore  BUILD.md  Cargo.toml  DESIGN.md  LICENSE  README.md  SKILL.md  demo_script.py
docs/: README.md  agent.md  cli.md  quickstart.md  troubleshooting.md  workflows.md
scripts/: build-all.sh  build-release.sh  package-release.sh
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs  output.rs
src/config/: mod.rs
src/db/: connection.rs  migrations.rs  queries.rs
src/models/: mod.rs  result.rs  script.rs
src/services/: cleanup.rs  mod.rs  parser.rs  register.rs  runner.rs  search.rs
src/utils/: hash.rs  paths.rs
tests/: e2e_cli.rs
