[package]
name = "pyrunner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "=1.0.71"
chrono = { version = "=0.4.26", features = ["serde"] }
clap = { version = "=3.2.25", features = ["derive"] }
cc = "=1.0.79"
dirs = "=4.0.0"
libc = "=0.2.147"
once_cell = "=1.17.1"
regex = "=1.7.3"
rusqlite = { version = "=0.27.0", features = ["bundled"] }
serde = { version = "=1.0.152", features = ["derive"] }
serde_json = "=1.0.91"
itoa = "=1.0.6"
proc-macro2 = "=1.0.51"
quote = "=1.0.23"
syn = "=1.0.107"
ryu = "=1.0.13"
sha2 = "=0.10.6"
textwrap = "=0.16.0"
thread_local = "=1.1.7"
toml = "=0.5.11"
unicode-ident = "=1.0.8"
unicode-width = "=0.1.10"
